# coding-server

./: .env.e2e  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  Taskfile.yml  compose.dev.yaml  compose.e2e.yaml  compose.prod.yaml  compose.yaml  openapi.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
agents/: pyproject.toml
agents-controller/: Dockerfile
agents-controller/tests/: test_cleanup.py  test_delegator.py  test_delegator_completion.py  test_heartbeat_timeout.py  test_lease_renewal.py  test_registry.py  test_routes.py  test_sandbox_registry.py
agents/crewai_coding_team/: pyproject.toml
agents/openhands_agent/: Dockerfile  pyproject.toml
agents/simple_crewai_pair_agent/: .gitignore  Dockerfile  pyproject.toml
agents/simple_crewai_pair_agent/src/simple_crewai_pair_agent/: __init__.py  agent.py  base.py  config.py  crew.py  crewai_agents.py  crewai_tasks.py  llm.py  result.py
agents/simple_crewai_pair_agent/src/worker/: agent_runner.py  app.py  config.py  git_utils.py  models.py  registration.py  routes.py
agents/simple_crewai_pair_agent/tests/: conftest_worker.py  test_agent_runner.py  test_registration.py  test_routes_diff.py  test_routes_files.py  test_routes_push.py
agents/simple_crewai_pair_agent/tests/integration/: conftest.py  test_crew_kickoff.py
agents/simple_crewai_pair_agent/tests/unit/: test_agent.py  test_config.py  test_logging_config.py  test_result.py
agents/simple_langchain_deepagent/: Dockerfile  pyproject.toml
agents/simple_langchain_deepagent/alembic/versions/: worker_0001_create_worker_executions.py
agents/simple_langchain_deepagent/src/simple_langchain_deepagent/: __init__.py  agent.py  config.py  result.py  tools.py
agents/simple_langchain_deepagent/src/worker/: __init__.py  agent_runner.py  app.py  config.py  registration.py  routes.py
agents/simple_langchain_deepagent/tests/: conftest.py  conftest_worker.py  test_agent_runner.py  test_git_utils.py  test_registration.py  test_routes.py
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_task_fields_and_settings.py  0003_make_project_name_nullable.py  0004_add_job_lease_fields.py  0005_add_agents_table.py  0006_add_agent_id_to_jobs.py  0007_update_agent_seeds.py  0008_add_branch_to_jobs.py  0009_drop_deprecated_agent_type_columns.py  0010_add_worker_fields_to_jobs.py  0011_add_openhands_agent.py  0011_add_sandboxes_table.py  0011_add_task_type_to_jobs.py  0012_add_openhands_agent.py  0013_add_sandboxes_table.py  0014_add_sandbox_fields_to_jobs.py
api/scripts/: check_openapi_fresh.sh  export_openapi.py
api/src/api/: db.py  main.py
api/src/api/models/: agent.py  job.py  project.py  sandbox.py  setting.py
api/src/api/routes/: agents.py  health.py  jobs.py  projects.py  sandboxes.py  settings.py  tasks.py  workers.py
api/src/api/schemas/: agent.py  project.py  sandbox.py  setting.py  task.py
api/src/api/services/: file_proxy_service.py  git_service.py  project_service.py  redis_client.py  setting_service.py  task_service.py
api/tests/: conftest.py
api/tests/integration/: test_agents.py  test_create_task_agent.py  test_create_task_existing.py  test_file_proxy.py  test_push_with_git_url.py  test_settings_api.py  test_task_capabilities.py  test_tasks_api.py
api/tests/unit/: test_file_proxy_service.py  test_git_service.py  test_health.py  test_project_service.py  test_setting_service.py  test_task_service.py  test_workers_route.py
controller/: pyproject.toml
controller/src/controller/: delegator.py  models.py  registry.py  routes.py
controller/tests/: conftest.py  test_cleanup.py  test_heartbeat_timeout.py  test_lease_renewal.py  test_registry.py  test_routes.py
e2e-pytest/: .gitignore  Dockerfile  conftest.py  pyproject.toml
e2e-pytest/tests/: test_api_db.py  test_health.py  test_sandbox.py  test_source_code_browser.py  test_task_types.py  test_z_browser.py
sandbox/: Dockerfile  pyproject.toml
sandbox/src/sandbox/: app.py  config.py  executor.py  mcp_server.py  registration.py  routes.py
sandbox/tests/: conftest.py  test_executor.py  test_mcp_server.py
simple_crewai_coding_agent/: .env.example  .gitignore  Dockerfile  pyproject.toml
simple_crewai_coding_agent/src/simple_crewai_coding_agent/: __init__.py  __main__.py  agents.py  config.py  crew.py  logging_config.py  result.py  tasks.py
simple_crewai_coding_agent/tests/: conftest.py
simple_crewai_coding_agent/tests/integration/: test_crew_kickoff.py  test_smoke.py
simple_crewai_coding_agent/tests/unit/: test_agents.py  test_config.py  test_crew_structure.py  test_logging_config.py  test_main.py  test_result.py  test_tasks.py
specs/: spec.md
specs/001-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-task-management-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cross-platform-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-crewai-coding-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-requirements-feature/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/: Dockerfile  pyproject.toml
tools/src/tools/: gateway.py
tools/src/tools/servers/: filesystem_server.py  git_server.py  shell_server.py
tools/tests/: conftest.py
tools/tests/integration/: test_gateway.py
tools/tests/unit/: test_filesystem_server.py
web/: Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
worker/: Dockerfile  pyproject.toml
worker/alembic/: env.py
worker/src/worker/: agent_runner.py  config.py  git_utils.py  lease_manager.py  models.py  state.py  worker.py
worker/tests/: conftest.py  test_agent_runner.py  test_git_utils.py  test_routes.py
worker/tests/integration/: test_worker_loop.py
worker/tests/unit/: test_agent_runner.py  test_lease_manager.py  test_state.py
(+132 files in other folders)
