[project]
name = "simple-langchain-deepagent"
version = "0.1.0"
description = "LangChain deep research agent (stub)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
